objects/CC_Request_For_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Requests For Approval</relationshipLabel>
        <relationshipName>CC_Requests_For_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer/ Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Requests For Approval</relationshipLabel>
        <relationshipName>CC_Requests_For_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distributor_Comments__c</fullName>
        <inlineHelpText>(Mandatory) Please enter a comment to be able to click reject.</inlineHelpText>
        <label>Distributor Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupemailID__c</fullName>
        <label>GroupemailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Requests For Approval</relationshipLabel>
        <relationshipName>CC_Requests_For_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Count__c</fullName>
        <label>Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approval Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>NOW()-Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Request For Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_Requested__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Customer_Comments__c</columns>
        <columns>Distributor_Comments__c</columns>
        <columns>GroupemailID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_New</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account_Name__c</columns>
        <columns>Customer_Comments__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Distributor_Comments__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All_New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_Records</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account_Name__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Quantity__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Customer_Comments__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account_Name__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Distributor_Comments__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Customer_Comments__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected_Records</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account_Name__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Quantity__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Customer_Comments__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Records</label>
    </listViews>
    <nameField>
        <displayFormat>RFA-{000000}</displayFormat>
        <label>CC Request For Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests For Approval</pluralLabel>
    <recordTypes>
        <fullName>RejectRecordType</fullName>
        <active>true</active>
        <label>RejectRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>